# spec-driven-todo-cli_Phase-I

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_app.py
.claude/skills/spec-driven-dev/: SKILL.md
.claude/skills/terminal-ui/: SKILL.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
history/prompts/001-recurring-time-ui/: 1-plan-recurring-time-customization-terminal-ui.plan.prompt.md  1-recurring-time-ui-specification.spec.prompt.md  2-tasks-recurring-time-customization-terminal-ui.tasks.prompt.md  3-analyze-recurring-time-customization-terminal-ui.analyze.prompt.md  4-plan-recurring-time-customization-terminal-ui.plan.prompt.md  5-tasks-recurring-time-customization-terminal-ui.tasks.prompt.md  6-analyze-recurring-time-customization-terminal-ui.analyze.prompt.md  7-implementation-recurring-time-customization-terminal-ui.implementation.prompt.md
history/prompts/001-todo-time-reminders/: 1-spec-todo-time-reminders.spec.prompt.md  2-plan-todo-time-reminders.plan.prompt.md  3-tasks-todo-time-reminders.tasks.prompt.md  (+1 more)
specs/001-recurring-time-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-console-basic/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-time-reminders/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-todo-priorities-tags-search-sort/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: main.py  models.py  todo.py
(+22 files in other folders)
